--- a/src/containers/UsersManagement.css
+++ b/src/containers/UsersManagement.css
@@ -8,15 +8,14 @@
   left: 0;
   right: 0;
   bottom: 0;
-  border: 3px solid black;
 }
 
-nav {
-  top: 0;
-  left: 33%;
-  right: 33%;
-  bottom: 0;
+.UsersManagement nav {
+  list-style: none;
   font-size: 18px;
   font-weight: bold;
-  border: 3px solid orange;
+}
+
+.Link {
+  padding: 20px;
 }
