--- a/src/components/NewUser.css
+++ b/src/components/NewUser.css
@@ -10,6 +10,7 @@
   padding: 30px;
   border: 1px solid #ccc;
   box-shadow: 0 2px 2px #ccc;
+  width: 400px;
 }
 
 .NewUser label {
@@ -18,6 +19,7 @@
 
 .NewUser input {
   margin: 10px;
+  width: 250px;
 }
 
 .NewUser button {
