--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 * {
-  /* border: 1px solid lightgray; */
+  /* border: 1px solid lightcoral; */
   box-sizing: border-box;
 }
 
@@ -22,10 +22,17 @@ nav {
 table {
   position: relative;
   padding: 30px;
-  border: 1px solid #ccc;
+  border-collapse: separate;
+  border: 3px solid purple;
   box-shadow: 0 2px 2px #ccc;
+  width: 800px;
   padding-right: 50px;
   padding-left: 50px;
+  text-align: left;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
 
 label {
@@ -38,7 +45,12 @@ input {
 }
 
 button {
-  padding: 0px;
+  background-color: rgb(0, 184, 222);
+  color: white;
+  border-radius: 2px;
+  box-shadow: 0 2px 2px #ccc;
+  position: relative;
+  width: 100%;
 }
 
 .Header {
@@ -72,6 +84,7 @@ button {
 }
 
 .UsersManagement {
+  /* border: 3px solid yellow; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -84,11 +97,12 @@ button {
 }
 
 .Users {
+  /* border: 3px solid green; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 600px;
+  width: 800px;
 }
 
 .Error {
